initial app functionalities added, missing integration for persistance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+## Database Properties for H2 in-memory DB, named eyjava
+spring.datasource.url = jdbc:h2:~/eyjava
+spring.datasource.username = eyjava
+spring.datasource.password = eyjava
+
+
+## Hibernate Properties
+# SQL dialect for hibernate usage is H2Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
