testing JSON format output for the UserController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## Database Properties for H2 in-memory DB, named eyjava
-spring.datasource.url = jdbc:h2:~/eyjava
+spring.datasource.url = jdbc:h2:mem:eyjava
 spring.datasource.username = eyjava
 spring.datasource.password = eyjava
 
