--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-dependencies:2.6.3.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-dependencies:2.6.3'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hibernate:hibernate-validator:6.0.13.Final'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'junit:junit:4.13'
 }
 
 tasks.named('test') {
