testing JPA and endpoint end to end, missing to validate a few settings for mem DB, as well as checking on issues with manual class conversion for DTO,JSON and Entity POJOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@
 spring.datasource.url = jdbc:h2:mem:eyjava
 spring.datasource.username = eyjava
 spring.datasource.password = eyjava
-
+spring.datasource.driver-class-name=org.h2.Driver
 
 ## Hibernate Properties
 # SQL dialect for hibernate usage is H2Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
